# labs

./: .gitattributes  .gitignore  .mcp.json  .mcp.json.disabled  .mcp.json.example  .pre-commit-config.yaml  CLAUDE.md
agendamento_engine/: .claudeignore  .dockerignore  .env  .env.example  .env.test.txt  .gitignore  .token-savior-cache.json  CLAUDE.md  Dockerfile  MIGRACAO.md  SPRINT-LOG.md  alembic.ini  conftest.py  create_user.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
agendamento_engine/app/: __init__.py  main.py
agendamento_engine/app/core/: celery_db_context.py  config.py  db_rls.py  deps.py  encryption.py  errors.py  idempotency.py  logging.py  rate_limit.py  security.py
agendamento_engine/app/infrastructure/: celery_app.py  event_bus.py
agendamento_engine/app/middleware/: impersonation.py  request_context.py  security_headers.py
agendamento_engine/app/modules/: notifications.py
agendamento_engine/app/workers/: appointment_reminder_handler.py  beat_schedule.py  booking_session_handlers.py  booking_session_worker.py  bot_inbound_worker.py  celery_beat_entrypoint.py  communication_worker.py  idempotency_cleanup.py  reminder_worker.py  session_cleanup_worker.py
agendamento_engine/docs/: analise-planejado-vs-executado.md  analise-pre-fase3.md  brief-fase1-fundacao.md  brief-fase2-financial-core-v2.md  brief-fase3-backend-only.md  conformidade-estagio-0.md  decisao-llm-provider-sprint20.md  gaps-visao-vs-codigo.md  pendencias-pos-sprint-integracoes.md  plano-comissao-v2.md  plano-estagio-0-completo.md  plano-execucao-fase3.md  plano-fase1-v3.md  plano-sprint-integracoes.md  plano-user-name.md
agendamento_engine/docs/technical/: README.md  api-reference.md  architecture.md  data-model.md  events.md  infrastructure.md  integrations.md  rbac.md  roadmap.md  security.md
agendamento_engine/migrations/: env.py
agendamento_engine/migrations/versions/: 16014789aa88_criando_tabela_blindadas.py  e0s18a_expenses.py  (+100 more)
agendamento_engine/scripts/: backfill_identity.py  migrate_uploads_to_supabase.py  rollback_uploads_to_volume.py  seed_dev.py  verify_bot_serialization.py
agendamento_engine/tests/: conftest.py  test_asaas_integration.py  test_backend_dividas_5a_5b.py  test_booking_flow_no_shift.py  test_booking_slots_aggregate.py  test_bot_f1_reschedule_orphan.py  test_bot_f2_slot_truncation.py  test_bot_f3_back_navigation.py  test_bot_f4_shift_substate.py  test_bot_f5a_shadow_telemetry.py  test_bot_timezone_display.py  test_cash_payment.py  test_checkout_b2.py  test_checkout_unificado.py  test_company_asaas_onboarding.py  test_conflito.py  test_cors.py  test_email_adapters.py  test_fee_policies.py  test_logging.py  test_owner_bypass_working_hours.py  test_pagseguro_integration.py  test_payments_refund.py  test_portal_camada2.py  test_portal_company_filter.py  test_portal_product_sales.py  test_s01_webhook_confirm.py  test_s02_cross_tenant_users.py  test_s03_webhook_auth.py  test_s21_celery_queue.py  test_security_session_invalidation.py  test_smtp_email.py  test_sprint10_operations.py  test_sprint11_catalog.py  test_sprint12_commissions.py  test_sprint13_customer_credit.py  test_sprint14_packages.py  test_sprint15_subscriptions.py  test_sprint16_promotions.py  test_sprint17_stock.py  (+27 more)
(+518 files in other folders)
